# habeas_corpus

./: .gitignore  analisis_dataset.py  errores.txt  errores_stf.txt  limpiar_texto.py  notas.txt  pyproject.toml  retry_stf_fallidos.py  retry_stj_fallidos.py  urls_documentos_stj.csv  web_scrapping_stf.py  web_scrapping_stj.py
